Updating license header (#163)
