# api/aether-4.0.0-openapi3.yaml
@@ -1,6 +1,6 @@
 # SPDX-FileCopyrightText: 2021-present Open Networking Foundation <info@opennetworking.org>
 #
-# SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
+# SPDX-License-Identifier: Apache-2.0
 components:
   parameters:
     target:
@@ -1279,9 +1279,8 @@ info:
     url: https://opennetworking.org
   description: "## Background\n\nThe Aether ROC control API is available via REST or via gNMI. It is expected that most external\nconsumers of the API will use REST.\n\nThe REST API supports the typical GET, POST, PATCH, DELETE operations:\n\n* GET. Retrieve an object.\n* POST. Create an object.\n* PUT,  PATCH. Modify an existing object.\n* DELETE. Delete an object.\n\nEndpoints are named based on the type of object. Some examples:\n\n* `GET http://roc/aether/v4.0.0/connectivity-service-v4/enterprise/`. Get a list of enterprises.\n* `GET http://roc/aether/v4.0.0/connectivity-service-v4/enterprise/Starbucks`. Get the Starbucks enterprise.\n* `POST http://roc/aether/v4.0.0/connectivity-service-v4/enterprise`. Create a new enterprise.\n* `PATCH http://roc/aether/v4.0.0/connectivity-service-v4/site/Starbucks-NewYork`. Update the Starbucks New York site.\n\nThis document is a high-level description of the objects that can be interacted with. For a\nlow-level description, see the Swagger API specification.\n\n## Identifying and Referencing Objects\n\nEvery object contains an `id` that is used to identify the object. The `id` is only unique within\nthe scope of a particular type of object. For example, a site may be named `foo` and a device-group\nmay also be named `foo`, and the two names do not conflict because they are different object types.\n\nSome objects contain references to other objects. For example, many objects contain references to\nthe `Enterprise` object, which allows them to be associated with a particular enterprise. References\nare constructed using the `id` field of the referenced object. It is an error to attempt to create\na reference to an object that does not exist. Deleting an object while there are open references\nto it from other objects is also an error.\n\n## Common Model Fields\n\nSeveral fields are common to all models in Aether:\n\n* `id`. The identifier for objects of this model.\n* `description`. A human-readable description, used to store additional context about the object.\n* `display-name`. A human-readable name that is shown in the GUI.\n\nAs these fields are common to all models, they will be omitted from the per-model descriptions below.\n\n## Key Aether Objects\n\nThe following is a list of Aether models, generally organized in a top-down manner.\n\n### Enterprise\n\n`Enterprise` forms the root of a customer-specific Enterprise hierarchy. The `Enterprise` model is\nreferenced by many other objects, and allows those objects to be scoped to a particular Enterprise\nfor ownership and role-based access control purposes. `Enterprise` contains the following fields:\n\n* `connectivity-service`. A list of connectivity services that realize connectivity for this\n  enterprise. A connectivity service is a reference to the SD-Core, and reflects either a 4G or a\n  5G core.\n\n### Site\n\n`Enterprises` are further divided into `Sites`. A site is a point of presence for an `Enterprise` and\nmay be either physical or logical (i.e. a single geographic location could in theory contain several\nlogical sites). Site contains the following fields:\n\n* `enterprise`. A link to the `Enterprise` that owns this site.\n* `imsi-definition`. A description of how IMSIs are constructed for this site. Contains the following\n  sub-fields:\n\n   * `mcc`. Mobile country code.\n   * `mnc`. Mobile network code.\n   * `enterprise`. A numeric enterprise id.\n   * `format`. A mask that allows the above three fields to be embedded into an IMSI. For example\n     `CCCNNNEEESSSSSS` will construct IMSIs using a 3-digit MCC, 3-digit MNC, 3-digit ENT, and a\n     6-digit subscriber.\n   \n* `small-cell` A list of 5G gNodeB or Access Point or Radios. Each access point has the following:\n\n  * `address`. Hostname of the small cell.\n  * `tac`. Type Allocation Code.\n  * `enable`. If set to `true`, the small cell is enabled. Otherwise, it is disabled.\n\n* `monitoring` Configuration of how the monitoring framework of the site can be connected:\n\n  * `edge-cluster-prometheus-url` the URL of the site's Edge cluster Prometheus service\n  * `edge-monitoring-prometheus-url` the URL of the site's Edge monitoring Prometheus service\n  * `edge-device` a list of monitoring devices that verify end-to-end connectivity\n\n    * `name` the name of the monitoring device (usually a Raspberry Pi). This will usually\n      correspond to its short hostname\n    * `display-name` a user friendly name\n    * `description` an optional description\n\n### Device-Group\n\n`Device-Group` allows multiple devices to be logically grouped together. `Device-Group` contains\nthe following fields:\n\n* `imsis`. A list of IMSI ranges. Each range has the following\n  fields:\n\n   * `name`. Name of the range. Used as a key.\n   * `imsi-range-from`. First subscriber in the range.\n   * `imsi-range-to`. Last subscriber in the range. Can be omitted if the range only contains one\n     IMSI.\n* `ip-domain`. Reference to an `IP-Domain` object that describes the IP and DNS settings for UEs\n  within this group.\n* `site`. Reference to the site where this `Device-Group` may be used. Indirectly identifies the\n  `Enterprise` as `Site` contains a reference to `Enterprise`.\n\n* `device` related configuration:\n\n  * `mbr`. The maximum bitrate in bits per second that the application will be limited to:\n\n    * `uplink` the `mbr` from device to slice\n    * `downlink` the `mbr` from slice to device\n\n### Virtual Cellular Service\n\n`Virtual Cellular Service (VCS)` connects a `Device-Group` to an `Application`. `VCS` has the\nfollowing fields:\n\n* `device-group`. A list of `Device-Group` objects that can participate in this `VCS`. Each\n  entry in the list contains both the reference to the `Device-Group` as well as an `enable`\n  field which may be used to temporarily remove access to the group.\n* `filter`. A list of `Application` objects that are either allowed or denied for this\n  `VCS`. Each entry in the list contains both a reference to the `Application` as well as an\n  `allow` field which can be set to `true` to allow the application or `false` to deny it. It\n  also has a `priority` field which can be used to order the applications when considering the\n  enforcing of their `allow` condition.\n* `template`. Reference to the `Template` that was used to initialize this `VCS`.\n* `upf`. Reference to the User Plane Function (`UPF`) that should be used to process packets\n  for this `VCS`. It's permitted for multiple `VCS` to share a single `UPF`.\n* `ap`. Reference to an Access Point List (`AP-List`) that lists the access points for this\n  `VCS`.\n* `enterprise`. Reference to the `Enterprise` that owns this `VCS`.\n* `SST`, `SD`, `uplink`, `downlink`, `traffic-class`. Parameters that were initialized using the\n  `template`. They are described in the section for the `Template` model.\n\n### Application\n\n`Application` specifies an application and the endpoints for the application. Applications are\nthe termination point for traffic from the UPF. Contains the following fields:\n\n* `address`. The DNS name or IP address of the endpoint.\n* `endpoint`. A list of endpoints. Each has the following fields:\n\n  * `name`. Name of the endpoint. Used as a key.\n  * `port-start`. Starting port number.\n  * `port-end`. Ending port number.\n  * `protocol`. `TCP|UDP`, specifies the protocol for the endpoint.\n  * `mbr`. The maximum bitrate in bits per second that the application will be limited to:\n\n    * `uplink` the `mbr` from device to application\n    * `downlink` the `mbr` from application to device\n\n* `enterprise`. Link to an `Enterprise` object that owns this application. May be left empty\n  to indicate a global application that may be used by multiple enterprises.\n\n## Supporting Aether Objects\n\n### Connectivity-Service\n\n`Connectivity-Service` specifies the URL of an SD-Core control plane.\n\n* `core-5g-endpoint`. Endpoint of a `config4g` or `config5g` core.\n\n### IP-Domain\n\n`IP-Domain` specifies IP and DNS settings and has the following fields:\n\n* `dnn`. Data network name for 5G, or APN for 4G.\n* `dns-primary`, `dns-secondary`. IP addresses for DNS servers.\n* `subnet`. Subnet to allocate to UEs.\n* `admin-status`. Tells whether these ip-domain settings should be used, or whether they\n  should be drained from UEs.\n* `mtu`. Ethernet maximum transmission unit.\n* `enterprise`. `Enterprise that owns this `IP-Domain`.\n\n### Template\n\n`Template` contains connectivity settings that are pre-configured by Aether Operations.\nTemplates are used to initialize `VCS` objects. `Template` has the following fields:\n\n* `sst`, `sd`. Slice identifiers.\n* `uplink`, `downlink`. Guaranteed uplink and downlink bandwidth.\n* `traffic-class`. Link to a `Traffic-Class` object that describes the type of traffic.\n* `slice` configuration for slice\n\n  * `mbr` configuration of maximum bit rate in slice\n\n    * `uplink` the `mbr` from device to slice\n    * `downlink` the `mbr` from slice to device\n\n### Traffic-Class\n\nSpecifies the class of traffic. Contains the following:\n\n* `arp`. Allocation and Retention Priority.\n* `qci`. QoS class identifier.\n* `pelr`. Packet error loss rate.\n* `pdb`. Packet delay budget.\n\n### UPF\n\nSpecifies the UPF that should forward packets. A UPF can only be used by one VCS at a time.\nHas the following fields:\n\n* `address`. Hostname or IP address of UPF.\n* `port`. Port number of UPF.\n* `enterprise`. Enterprise that owns this UPF.\n* `site`. The Site that this UPF is located at.\n* `config-endpoint` URL for configuring the UPF\n"
   license:
-    name: LicenseRef-ONF-Member-1.0
-    url: https://opennetworking.org/wp-content/uploads/2020/06/ONF-Member-Only-Software-License-v1.0.pdf
-  termsOfService: https://opennetworking.org/wp-content/uploads/2019/02/ONF-Licensing-and-IPR-FAQ-2020-06.pdf
+    name: Apache-2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0
   title: Aether 4.0.0
   version: 4.0.0
 openapi: 3.0.0
