# pkg/toplevel/types/transaction_enum.go
@@ -1,6 +1,6 @@
 // SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>
 //
-// SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
+// SPDX-License-Identifier: Apache-2.0
 //
 
 package types
